--- a/index.html
+++ b/index.html
@@ -5,6 +5,267 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Job Listings</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@500;700&display=swap");
+      :root {
+        --white: #fff;
+        --gray: hsl(180, 8%, 52%);
+        --cyan: hsl(180, 29%, 50%);
+        --black: hsl(180, 14%, 20%);
+        --body-bg: hsl(180, 52%, 96%);
+        --light-cyan: hsl(180, 31%, 95%);
+      }
+
+      /* Simple Rest */
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      [hidden] {
+        display: none !important;
+      }
+      img {
+        pointer-events: none;
+      }
+      button {
+        border: none;
+        outline: none;
+        font: inherit;
+        color: inherit;
+        background: none;
+      }
+
+      /* Utilities */
+      .sr-only {
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        position: absolute;
+        clip: rect(0, 0, 0, 0);
+      }
+      .list {
+        gap: 16px;
+        display: flex;
+        flex-wrap: wrap;
+        list-style: none;
+      }
+      .card {
+        display: flex;
+        border-radius: 6px;
+        align-items: center;
+        padding-inline: 24px;
+        justify-content: space-between;
+        background-color: var(--white);
+        box-shadow: 0 3px 5px 0 hsl(180deg 29% 50% / 20%);
+      }
+      .badge {
+        padding: 10px;
+        font-weight: 700;
+      }
+      .badge-rect {
+        overflow: hidden;
+        max-height: 32px;
+        border-radius: 4px;
+        color: var(--cyan);
+        background-color: var(--light-cyan);
+      }
+      .badge-pills {
+        font-size: 14px;
+        max-height: 24px;
+        padding-block: 7px;
+        border-radius: 20px;
+        color: var(--white);
+        text-transform: uppercase;
+      }
+      .badge-pills--new {
+        background-color: var(--cyan);
+      }
+      .badge-pills--featured {
+        background-color: var(--black);
+      }
+      .btn {
+        cursor: pointer;
+      }
+      .will-change-color {
+        will-change: color;
+        transition: 0.3s color;
+      }
+      .will-change-bg-color {
+        will-change: background-color;
+        transition: 0.3s background-color;
+      }
+      .loader {
+        top: 50%;
+        left: 50%;
+        width: 80px;
+        height: 80px;
+        position: absolute;
+        transform: translate(-50%, -50%);
+      }
+      .loader:after {
+        content: "";
+        margin: 8px;
+        width: 64px;
+        height: 64px;
+        display: block;
+        border-radius: 50%;
+        border: 6px solid var(--cyan);
+        animation: loader 1.2s linear infinite;
+        border-color: var(--cyan) transparent var(--cyan) transparent;
+      }
+      @keyframes loader {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* App Layouts */
+      .app__header {
+        height: 156px;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-color: var(--cyan);
+        background-image: url(./assets/images/bg-header-mobile.svg);
+      }
+      @media (min-width: 768px) {
+        .app__header {
+          background-image: url(./assets/images/bg-header-desktop.svg);
+        }
+      }
+      .app__main {
+        max-width: 1010px;
+        position: relative;
+        margin-inline: auto;
+        padding-inline: 24px;
+        height: calc(100vh - 156px);
+        background-color: var(--body-bg);
+        font: 500 15px/1 "League Spartan", sans-serif;
+      }
+
+      /* App Filters */
+      .app__main__filters {
+        top: -36px;
+        padding: 20px;
+        column-gap: 40px;
+        min-height: 72px;
+        position: relative;
+      }
+      .app__main__filters__list {
+        flex: 1;
+      }
+      .app__main__filter {
+        display: flex;
+      }
+      .app__main__filter_remove {
+        padding: 10px;
+        background-color: var(--cyan);
+      }
+      .app__main__filter_remove:is(:hover, :focus-visible) {
+        background-color: var(--black);
+      }
+      .app__main__filters__clear {
+        font-weight: 700;
+        color: var(--gray);
+      }
+      .app__main__filters__clear:is(:hover, :focus-visible) {
+        color: var(--cyan);
+        text-decoration: underline;
+      }
+
+      /* App Jobs */
+      .app__main_jobs {
+        display: grid;
+        row-gap: 40px;
+        padding-block: 55px 35px;
+      }
+      @media (min-width: 768px) {
+        .app__main_jobs {
+          row-gap: 24px;
+          padding-block: 75px;
+        }
+        .app__main_job {
+          padding-block: 32px;
+        }
+      }
+      .app__main_job--featured {
+        border-left: 5px solid var(--cyan);
+      }
+      .app__main_job__info__wrapper {
+        display: flex;
+        column-gap: 24px;
+        align-items: center;
+      }
+      @media (max-width: 767px) {
+        .app__main_job {
+          position: relative;
+          flex-direction: column;
+          align-items: flex-start;
+          padding-block: 32px 24px;
+        }
+        .app__main_job__info__wrapper {
+          width: 100%;
+          margin-bottom: 16px;
+          padding-bottom: 16px;
+          border-bottom: 1px solid hsl(180deg 8% 52% / 20%);
+        }
+        .app__main_job__logo {
+          top: -24px;
+          left: 24px;
+          width: 48px;
+          height: 48px;
+          position: absolute;
+        }
+      }
+      .app__main_job__info {
+        display: grid;
+        row-gap: 16px;
+      }
+      .app__main_job__company {
+        display: flex;
+        column-gap: 8px;
+        align-items: center;
+      }
+      .app__main_job__company__name {
+        margin-right: 15px;
+        color: var(--cyan);
+      }
+      .app__main_job__role {
+        font-size: 1em;
+        color: var(--black);
+      }
+      .app__main_job__desc {
+        display: flex;
+        column-gap: 10px;
+        color: var(--gray);
+        align-items: center;
+      }
+      @media (min-width: 768px) {
+        .app__main_job__info {
+          row-gap: 12px;
+        }
+        .app__main_job__company__name {
+          margin-right: 8px;
+        }
+        .app__main_job__role {
+          font-size: 1.5em;
+        }
+        .app__main_job__desc {
+          column-gap: 18px;
+          font-size: 1.2em;
+        }
+      }
+      .app__main_job__addFilter {
+        will-change: color, background-color;
+      }
+      .app__main_job__addFilter:is(:hover, :focus-visible) {
+        color: var(--white);
+        background-color: var(--cyan);
+      }
+    </style>
   </head>
   <body>
     <main class="app">
