EDIT: main section height

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         position: relative;
         margin-inline: auto;
         padding-inline: 24px;
-        height: calc(100vh - 156px);
+        min-height: calc(100vh - 156px);
         background-color: var(--body-bg);
         font: 500 15px/1 "League Spartan", sans-serif;
       }
