EDIT: base styles

--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
         }
       }
 
+      /* Base */
+      body {
+        min-height: 100vh;
+        background-color: var(--body-bg);
+        font: 500 15px/1 "League Spartan", sans-serif;
+      }
+
       /* App Layouts */
       .app__header {
         height: 156px;
@@ -142,8 +149,6 @@
         margin-inline: auto;
         padding-inline: 24px;
         min-height: calc(100vh - 156px);
-        background-color: var(--body-bg);
-        font: 500 15px/1 "League Spartan", sans-serif;
       }
 
       /* App Filters */
