--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       <header class="app__header">
         <h1 class="sr-only">Job Listings</h1>
       </header>
-      <section class="app__main">
+      <div role="region" aria-label="Job Posts" class="app__main">
         <div hidden class="app__main__filters | card">
           <ul class="app__main__filters__list | list"></ul>
           <button
@@ -291,7 +291,7 @@
         <div class="app__main_jobs">
           <p role="alert" aria-label="Loading" class="loader"></p>
         </div>
-      </section>
+      </div>
     </main>
 
     <script>
