--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         padding-inline: 24px;
         justify-content: space-between;
         background-color: var(--white);
-        box-shadow: 0 3px 5px 0 hsl(180deg 29% 50% / 20%);
+        box-shadow: rgb(0 0 0 / 10%) 0px 25px 20px -20px;
       }
       .badge {
         padding: 10px;
@@ -144,20 +144,24 @@
         }
       }
       .app__main {
-        max-width: 1010px;
+        max-width: 1110px;
         position: relative;
         margin-inline: auto;
-        padding-inline: 24px;
         min-height: calc(100vh - 156px);
+      }
+      @media (max-width: 1130px) {
+        .app__main {
+          padding-inline: 24px;
+        }
       }
 
       /* App Filters */
       .app__main__filters {
-        top: -36px;
+        --height: 72px;
         padding: 20px;
-        column-gap: 40px;
-        min-height: 72px;
         position: relative;
+        min-height: var(--height);
+        top: calc(var(--height) / -2);
       }
       .app__main__filters__list {
         flex: 1;
@@ -186,6 +190,9 @@
         display: grid;
         row-gap: 40px;
         padding-block: 55px 35px;
+      }
+      .app__main__filters:not([hidden]) + .app__main_jobs {
+        padding-top: 5px;
       }
       @media (min-width: 768px) {
         .app__main_jobs {
